# ble-buddy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bledevice.cpp  bledevice.hpp  bledevicefinder.cpp  bledevicefinder.hpp  bleservice.cpp  bleservice.hpp  bleserviceinfo.cpp  bleserviceinfo.hpp  bleservices.json  cmake-ble-buddy.txt  uartservice.cpp  uartservice.hpp
examples/: CMakeLists.txt
examples/nrfledrc/: CMakeLists.txt  PaneWithTitle.qml  bleservices.json  ledservice.cpp  ledservice.h  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
src/: CMakeLists.txt  bledevice.cpp  bledevice.hpp  bledevicefinder.cpp  bledevicefinder.hpp  bleserviceinfo.hpp  uartservice.cpp
